app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower

$row-border-color: #A7A9AC;
$footer-color: #808285;

h2
{
  em {
    background-color: #D2232A;
    padding-left: 10px;
    padding-right: 20px;
  }
}

.circle {
	border-radius: 50%;
	width: 30px;
	height: 30px;
  background-color: #444;
}

.lead-section {
  color: #fff;
  background-color: #444;
  padding: 50px;
  text-align: left;

  h2
  {
    width: 45%;
    display: inline-block;
    margin: 0px;
    padding: 0px;
    font-size: 4rem;
    margin-left: 50px;
  }
}

.hero-text {
  text-transform: uppercase;
  text-align: left;
  margin-left: 50px;
  color: #444 !important;
}

.featurette {
  padding-top: 100px;
  padding-bottom: 100px;
  min-height: 600px;
  padding-left: 100px;

  h2
  {
    font-size: 60px;
    font-weight: 600;
    color: #B92F1B;
  }

  h3
  {
    font-size: 6rem;
  }

  p
  {
    margin-top: 20px;
    font-size: 16px;
  }

  h2, p
  {
    text-align: center;
  }

  .section-content
  {
    // margin: 0px;
    // background-image: url('/images/grid.png');
    // background-size:
    // padding: 20px;
  }

}

.video-section
{
  margin-top: 50px;

  .branding-category h4 {
    display: inline-block;
  }
}

.logo-em {
  font-style: normal;
  font-weight: bold;
}

.featurette.alt {
  background-color: #444;
}
.branding-category
{
  p, h4 {
    text-align: left;
  }

  h4 {
    font-size: 4rem;
    padding-top: 5rem;
  }

  p {
    width: 80%;
  }
}

.sub-section {
  margin-bottom: 10rem;
}

.video-frame {
    border: 5px solid #d8d6d4;
}

.logo-section {

  .logo-container {
    text-align: center;
    margin-bottom: 2rem;

    img {
      margin-left: auto;
      margin-right: auto;
      display: inline-block;
    }

    .logo-color {
      border: 1px solid #F0A3A2;
      width: 46%;
      margin: auto auto;
    }
  }
}

.btn-outline
{
  border-color: #666;
  color: #666;
  background-color: transparent;
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;
  font-family: 'Raleway', sans-serif;
  color: #535865;
  background-color: rgba(255, 252, 245, .34);
}

.headerscroll
{
  position: absolute;
  width: 100%;
  top: 0;
  bottom: 0;
  opacity: 0.3;
  background-image: url('../images/scroll_logos.png');
  background-repeat: repeat-x;

  -webkit-animation-name: animatedBackground;
  -webkit-animation-timing-function: linear;
  -webkit-animation-duration: 12000s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-delay: 2s;

  animation-name: animatedBackground;
  animation-duration: 12000s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-delay: 2s;

  z-index: -1;
}

@-webkit-keyframes animatedBackground {
  from { background-position: 0 0; }
  to { background-position: -1000000px 0; }
}

@keyframes animatedBackground {

	to { background-position: 100% 0; }
}

.jumbotron
{
  background-color: transparent;
  position: relative;
  min-height: 500px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  margin-left: 2em;
  margin-right: 2em;
  margin-bottom: 1em;
  color: #808285;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }

  a {
    font-size: 1.6rem;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  margin: 1em;
  color: #fff;
  background-color: #666;
}

.half-rule
{
  width: 100px;
  margin: 40px auto;
}

.container-narrow > hr {
  margin: 30px 0;
}

.about-video-row
{
  margin-bottom: 40px;
}

.profile-row
{
  margin-bottom: 40px;

  .profile
  {
    text-align: center;

    img
    {
      display:inline-block;
    }
  }
}

.video {
  min-height: 360px;
  background-color: #779699;
  margin-left: .5em;
  margin-right: .5em;
}

.video-row
{
  margin-bottom: 40px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
  p + h4 {
    margin-top: 28px;
  }
}

.row.content
{
  border-top: 1px solid $row-border-color;
  margin: .5em;
  padding: .5em;
}

.logo-carousel
{
  margin-bottom: 0px;
  line-height: 100px;

  img
  {
    margin: 1.5em;
    display: inline-block !important;
    vertical-align: center;
  }
}

.brand-slide
{
  p
  {
    // font-size: 18px;
    font-weight: 300;
  }
}

.slick-slide {
  float: none;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }

  /* Space out the masthead */
  .header {
    margin-top: 20px;
    margin-bottom: 30px;
    a
    {
      display: block;
    }
  }

  .link-wrap
  {
    height: 4.5rem;
    line-height: 4.5rem;
    margin-top: 8px;

    a
    {
      line-height: 2.25rem;
      font-size: 1.6rem;
      color: #8A8A8A;

      font-style: normal;
      display: inline-block;
      margin-right: 10px;
    }
  }

  .page-header
  {
    margin-bottom: 2em;
  }

  .print
  {
    .page
    {
      padding: 0px !important;
    }
  }

  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    position: relative;
    border-bottom: 0;
    min-height: 500px;

    h1
    {
      padding-top: 50px;
      font-size: 16rem;
      font-weight: 300;
    }

    p
    {
      font-size: 3.5rem;
      font-weight: 300;
    }
  }
}

